--- a/App/app/src/main/res/layout/activity_login.xml
+++ b/App/app/src/main/res/layout/activity_login.xml
@@ -5,24 +5,18 @@
     android:background="@color/bg_login"
     android:gravity="center"
     android:orientation="vertical"
-    android:padding="10dp" >
+    android:padding="10dp">
 
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:orientation="vertical"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp" >
+
 
         <EditText
-            android:id="@+id/email"
+            android:id="@+id/userid"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:background="@color/white"
-            android:hint="@string/hint_email"
-            android:inputType="textEmailAddress"
+            android:hint="@string/hint_userid"
+            android:inputType="text"
             android:padding="10dp"
             android:singleLine="true"
             android:textColor="@color/input_login"
@@ -50,7 +44,8 @@
             android:layout_marginTop="20dip"
             android:background="@color/btn_login_bg"
             android:text="@string/btn_login"
-            android:textColor="@color/btn_login" />
+            android:textColor="@color/btn_login"
+            android:onClick="userLogin"/>
 
         <!-- Link to Login Screen -->
 
@@ -63,7 +58,8 @@
             android:text="@string/btn_link_to_register"
             android:textAllCaps="false"
             android:textColor="@color/white"
-            android:textSize="15dp" />
-    </LinearLayout>
+            android:textSize="15dp"
+            android:onClick="userReg"/>
+
 
 </LinearLayout>
