--- a/App/app/src/main/res/layout/activity_main.xml
+++ b/App/app/src/main/res/layout/activity_main.xml
@@ -127,6 +127,7 @@ tools:context="${relativePackage}.${activityClass}" >
     android:textSize="15dp"
     android:layout_alignParentBottom="true"
     android:layout_alignParentLeft="true"
-    android:layout_alignParentStart="true" />
+    android:layout_alignParentStart="true"
+    android:onClick="logout" />
 
 </RelativeLayout>
