--- a/App/app/src/main/res/layout/activity_trainees.xml
+++ b/App/app/src/main/res/layout/activity_trainees.xml
@@ -59,6 +59,7 @@
         android:textSize="15dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:onClick="logout" />
 
 </RelativeLayout>
