--- a/App/app/src/main/res/layout/activity_training_status.xml
+++ b/App/app/src/main/res/layout/activity_training_status.xml
@@ -30,6 +30,7 @@
         android:textSize="15dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:onClick="logout" />
 
 </RelativeLayout>
