--- a/App/app/src/main/res/layout/activity_cohorts.xml
+++ b/App/app/src/main/res/layout/activity_cohorts.xml
@@ -1,8 +1,10 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-tools:context="${relativePackage}.${activityClass}" >
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+     tools:context="${relativePackage}.${activityClass}"
+    android:weightSum="1">
 
 <Button
     android:id="@+id/btnCohort"
@@ -18,19 +20,39 @@ tools:context="${relativePackage}.${activityClass}" >
     android:layout_alignParentLeft="true"
     android:layout_alignParentStart="true" />
 
+    <HorizontalScrollView
+        android:layout_width="match_parent"
+        android:layout_height="215dp"
+        android:id="@+id/horizontalScrollView"
+        android:layout_weight="1.02">
 
-<Button
-    android:id="@+id/btnLogout"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/btn_logut_bg"
-    android:text="@string/btn_logout"
-    android:textAllCaps="false"
-    android:textColor="@color/white"
-    android:textSize="15dp"
-    android:layout_alignParentBottom="true"
-    android:layout_alignParentLeft="true"
-    android:layout_alignParentStart="true"
-    android:onClick="logout" />
+        <ScrollView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/scrollView">
 
-</RelativeLayout>
+            <TableLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:stretchColumns="1,0,0"
+                android:id="@+id/maintable" >
+            </TableLayout>
+
+        </ScrollView>>
+    </HorizontalScrollView>
+
+    <Button
+        android:id="@+id/btnLogout"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/btn_logut_bg"
+        android:text="@string/btn_logout"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
+        android:textSize="15dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:onClick="logout" />
+
+</LinearLayout>
