--- a/App/app/src/main/res/layout/activity_trainees_list.xml
+++ b/App/app/src/main/res/layout/activity_trainees_list.xml
@@ -1,8 +1,10 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="${relativePackage}.${activityClass}" >
+    android:orientation="vertical"
+    tools:context="${relativePackage}.${activityClass}"
+    android:weightSum="1">
 
     <Button
         android:id="@+id/btnTrainees_list"
@@ -19,6 +21,25 @@
         android:layout_alignParentStart="true" />
 
 
+    <HorizontalScrollView
+        android:layout_width="match_parent"
+        android:layout_height="372dp"
+        android:id="@+id/horizontalScrollView"
+        android:layout_weight="1.10">
+
+        <ScrollView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/scrollView2" >
+
+            <TableLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:stretchColumns="1,0,0"
+                android:id="@+id/maintable1"></TableLayout>
+        </ScrollView>
+    </HorizontalScrollView>
+
     <Button
         android:id="@+id/btnLogout"
         android:layout_width="fill_parent"
@@ -33,4 +54,4 @@
         android:layout_alignParentStart="true"
         android:onClick="logout" />
 
-</RelativeLayout>
+</LinearLayout>
