--- a/App/app/src/main/res/layout/activity_cohorts.xml
+++ b/App/app/src/main/res/layout/activity_cohorts.xml
@@ -15,7 +15,6 @@
     android:textAllCaps="false"
     android:textColor="@color/white"
     android:textSize="15dp"
-    android:onClick="cohorts"
     android:layout_alignParentTop="true"
     android:layout_alignParentLeft="true"
     android:layout_alignParentStart="true" />
@@ -38,7 +37,7 @@
                 android:id="@+id/maintable" >
             </TableLayout>
 
-        </ScrollView>>
+        </ScrollView>
     </HorizontalScrollView>
 
     <Button
@@ -53,6 +52,6 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:onClick="logout" />
+        android:onClick="back" />
 
 </LinearLayout>
