--- a/App/app/src/main/res/layout/activity_data_entry_status.xml
+++ b/App/app/src/main/res/layout/activity_data_entry_status.xml
@@ -13,41 +13,28 @@
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:textSize="15dp"
-        android:onClick="data_entry_status"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
-    <ScrollView
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        tools:context=".DataEntryStatus"
-        android:layout_above="@+id/btnLogout"
-        android:layout_below="@+id/btnData_entry_status">
-
-        <HorizontalScrollView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:focusableInTouchMode="true"
-            android:focusable="true">
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="215dp"
+            android:id="@+id/scrollView"
+            android:layout_below="@+id/btnData_entry_status"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_above="@+id/btnLogout">
 
             <TableLayout
-                android:id="@+id/table"
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:focusableInTouchMode="true"
-                android:focusable="true"></TableLayout>
+                android:layout_width="match_parent"
+                android:gravity="center"
+                android:layout_height="0dp"
+                android:stretchColumns="2,0,0"
+                android:id="@+id/maintable2" >
+            </TableLayout>
 
-        </HorizontalScrollView>
-    </ScrollView>
-
-
+        </ScrollView>
     <Button
         android:id="@+id/btnLogout"
         android:layout_width="fill_parent"
@@ -60,6 +47,6 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:onClick="logout" />
+        android:onClick="back" />
 
 </RelativeLayout>
