--- a/App/app/src/main/res/layout/activity_trainees.xml
+++ b/App/app/src/main/res/layout/activity_trainees.xml
@@ -16,8 +16,7 @@
     android:textSize="15dp"
     android:layout_below="@+id/btnCohort"
     android:layout_alignParentLeft="true"
-    android:layout_alignParentStart="true"
-    android:onClick="trainees" />
+    android:layout_alignParentStart="true" />
 
 
     <Button
@@ -32,7 +31,8 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:onClick="logout" />
+        android:onClick="back"
+        android:layout_marginTop="5dp"/>
 
     <LinearLayout
         android:orientation="vertical"
@@ -43,20 +43,6 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true">
-
-        <Button
-            android:id="@+id/btnEnter_edit_trainees_details"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/btn_logut_bg"
-            android:text="@string/btn_enter_edit_trainees_details"
-            android:textAllCaps="false"
-            android:textColor="@color/white"
-            android:textSize="15dp"
-            android:onClick="enter_edit_trainees_details"
-            android:layout_centerVertical="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
 
         <Button
             android:id="@+id/btnTrainees_list"
@@ -71,6 +57,38 @@
             android:layout_below="@+id/btnEnter_edit_trainees_details"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
+
+        <Button
+            android:id="@+id/btnEnter_trainees_details"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/btn_logut_bg"
+            android:text="@string/btn_enter_trainees_details"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:textSize="15dp"
+            android:onClick="enter_trainees_details"
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="5dp"/>
+
+        <Button
+            android:id="@+id/btnEdit_trainees_details"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/btn_logut_bg"
+            android:text="@string/btn_edit_trainees_details"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:textSize="15dp"
+            android:onClick="edit_trainees_details"
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="5dp"/>
+
+
     </LinearLayout>
 
 </RelativeLayout>
