--- a/App/app/src/main/res/layout/activity_training_status.xml
+++ b/App/app/src/main/res/layout/activity_training_status.xml
@@ -13,7 +13,6 @@
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:textSize="15dp"
-        android:onClick="training_status"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
@@ -60,6 +59,6 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:onClick="logout" />
+        android:onClick="back" />
 
 </RelativeLayout>
