two layout working
two layout working (general and training details) with our error.

--- a/App/app/src/main/res/layout/activity_official_details.xml
+++ b/App/app/src/main/res/layout/activity_official_details.xml
@@ -750,7 +750,7 @@
             </TableLayout>
 
             <fragment
-                android:name="com.rijofaith.EnterTraineeDetails.Info"
+                android:name="com.rijofaith.app.Info"
                 android:id="@+id/fragment_place"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
