--- a/App/app/src/main/res/layout/activity_family_details.xml
+++ b/App/app/src/main/res/layout/activity_family_details.xml
@@ -1,9 +1,45 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/bg_login"
-    android:weightSum="1">
+    android:background="@color/bg_login">
+
+    <Button
+        android:id="@+id/btnFamily_details"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/btn_logut_bg"
+        android:text="@string/btn_family_details"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
+        android:textSize="15dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <HorizontalScrollView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/horizontalScrollView10"
+        android:layout_below="@+id/btnFamily_details"
+        android:fillViewport="true"
+        android:focusable="true"
+        android:layout_above="@+id/btnLogout">
+
+        <ScrollView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/scrollView15"
+            android:layout_below="@+id/btnFamily_details"
+            android:fillViewport="true"
+            android:focusable="true"
+            android:layout_above="@+id/btnLogout">
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="415dp"
+                android:layout_above="@+id/btnLogout"
+                android:layout_below="@+id/btnFamily_details">
 
     <TableLayout
         android:layout_width="fill_parent"
@@ -122,4 +158,20 @@
         </TableRow>
 
     </TableLayout>
-</LinearLayout>
+            </LinearLayout>
+        </ScrollView>
+    </HorizontalScrollView>
+    <Button
+        android:id="@+id/btnLogout"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/btn_logut_bg"
+        android:text="@string/btn_logout"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
+        android:textSize="15dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:onClick="back" />
+</RelativeLayout>
